--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/sitemap": "^3.1.5",
     "@axe-core/playwright": "^4.9.1",
+    "@radix-ui/colors": "^3.0.0",
     "astro": "^4.8.6",
     "typescript": "^5.4.5"
   },
