--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.12",
     "@typescript-eslint/parser": "^7.10.0",
-    "eslint": "^9.3.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-astro": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "sharp": "^0.33.4"
   }
 }
