--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "test": "playwright test --ui"
+    "test": "playwright test --reporter=html"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
