--- a/package.json
+++ b/package.json
@@ -8,22 +8,30 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "test": "playwright test --ui"
+    "test": "playwright test --reporter=html"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/react": "^3.4.0",
     "@astrojs/sitemap": "^3.1.5",
     "@axe-core/playwright": "^4.9.1",
     "@radix-ui/colors": "^3.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.8.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.12",
     "@typescript-eslint/parser": "^7.10.0",
-    "eslint": "^9.3.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-astro": "^1.2.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0"
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "sass": "^1.77.2",
+    "sharp": "^0.33.4"
   }
 }
