--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "rough-notation": "^0.5.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
