--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^4.11.0",
     "astro-font": "^0.0.81",
     "dayjs": "^1.11.11",
+    "fathom-client": "^3.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
