--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,4 @@
 {
-  "recommendations": [
-    "astro-build.astro-vscode",
-    "dbaeumer.vscode-eslint"
-  ],
+  "recommendations": ["astro-build.astro-vscode", "dbaeumer.vscode-eslint"],
   "unwantedRecommendations": []
 }
