--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,11 @@
 {
   "recommendations": [
     "astro-build.astro-vscode",
-    "dbaeumer.vscode-eslint",
-    "deque-systems.vscode-axe-linter"
+    "deque-systems.vscode-axe-linter",
+    "biomejs.biome"
   ],
-  "unwantedRecommendations": []
+  "unwantedRecommendations": [
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
+  ]
 }
