--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint .",
+    "lint": "biome lint",
+    "lint:fix": "biome lint --write",
+    "format": "biome format",
+    "format:fix": "biome format --write",
+    "check": "astro check && biome check",
+    "check:fix": "astro check && biome check --write",
     "test": "playwright test --reporter=html",
     "check-links": "lychee --config .lychee.toml ."
   },
@@ -33,15 +38,9 @@
     "typescript": "^5.5.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@playwright/test": "^1.45.1",
     "@types/node": "^20.14.10",
-    "@typescript-eslint/parser": "^7.16.0",
-    "eslint": "^9.7.0",
-    "eslint-plugin-astro": "^1.2.3",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-astro-organize-imports": "^0.4.9",
     "sass": "^1.77.8",
     "sharp": "^0.33.4"
   },
