--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@astrojs/react": "^3.6.1",
     "@astrojs/sitemap": "^3.1.6",
     "@axe-core/playwright": "^4.9.1",
+    "@keystatic/astro": "^5.0.0",
+    "@keystatic/core": "^0.5.32",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.13.2",
