--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.1.6",
     "@axe-core/playwright": "^4.9.1",
+    "@keystatic/astro": "^5.0.0",
+    "@keystatic/core": "^0.5.32",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.13.3",
     "astro-font": "^0.1.81",
     "dayjs": "^1.11.12",
-    "fathom-client": "^3.7.0",
+    "fathom-client": "^3.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
