--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.2",
-    "@astrojs/cloudflare": "^11.0.4",
+    "@astrojs/cloudflare": "9.2.1",
     "@astrojs/markdoc": "^0.11.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.1.6",
