Configure Keystatic images and add field descriptions

--- a/src/content/authors/eva-decker.yaml
+++ b/src/content/authors/eva-decker.yaml
@@ -1,6 +1,6 @@
 name: Eva Decker
 role: Co-Founder, Namesake
-avatar: ./_images/eva-decker.jpg
+avatar: ~/assets/images/authors/eva-decker/avatar.jpg
 bio: Eva Decker (she/they) leads Namesake's product and design. Previously, she's worked as a product designer and design engineer at Scribe, Cityblock, and Dropbox. 
 socialLinks:
   - name: Website
