--- a/src/content/partners/justice-tech.yaml
+++ b/src/content/partners/justice-tech.yaml
@@ -1,4 +1,4 @@
 name: Justice Tech Association
-logo: ./_images/justice-tech-association.png
+logo: ../../assets/images/partners/justice-tech/logo.png
 url: https://justicetechassociation.org/
 height: 50
