--- a/src/content/partners/malgbtcc.yaml
+++ b/src/content/partners/malgbtcc.yaml
@@ -1,4 +1,4 @@
 name: Massachusetts LGBT Chamber of Commerce
-logo: ./_images/malgbtcc.png
+logo: ../../assets/images/partners/malgbtcc/logo.png
 url: https://malgbtcc.org/
 height: 44
