--- a/src/content/partners/masstpc.yaml
+++ b/src/content/partners/masstpc.yaml
@@ -1,4 +1,4 @@
 name: Massachusetts Transgender Political Coalition
-logo: ./_images/masstpc.png
+logo: ../../assets/images/partners/masstpc/logo.png
 url: https://www.masstpc.org/
 height: 72
