--- a/src/content/partners/name-coalition.yaml
+++ b/src/content/partners/name-coalition.yaml
@@ -1,4 +1,4 @@
 name: NAME Coalition
-logo: ./_images/name-coalition.png
+logo: ../../assets/images/partners/name-coalition/logo.png
 url: https://namecoalition.org/
 height: 68
