--- a/src/content/partners/visible-hands.yaml
+++ b/src/content/partners/visible-hands.yaml
@@ -1,4 +1,4 @@
 name: Visible Hands
-logo: ./_images/visible-hands.svg
+logo: ../../assets/images/partners/visible-hands/logo.svg
 url: https://www.visiblehands.vc/
 height: 50
