--- a/src/content/press/2024-06-washington-blade.yaml
+++ b/src/content/press/2024-06-washington-blade.yaml
@@ -3,5 +3,5 @@ date: 2024-06-14
 url: https://www.washingtonblade.com/2024/06/14/namesake-collaborative-profile/
 outlet: Washington Blade
 image:
-  src: ./_images/washington-blade.jpg
+  src: ~/assets/images/press/2024-06-washington-blade/washington-blade.jpg
   alt: "Kelsey Grunstra, Tre’Andre Carmel Valentine, MG Xiong, and Luke Lennon sit on a couch and smile"
