--- a/src/content/authors/luke-lennon.yaml
+++ b/src/content/authors/luke-lennon.yaml
@@ -1,4 +1,4 @@
 name: Luke Lennon
 role: Co-Founder, Namesake
-avatar: ./_images/luke-lennon.jpg
+avatar: ~/assets/images/authors/luke-lennon/avatar.jpg
 bio: Luke Lennon (any/all) is the founder of Namesake and lorem ipsum dolor sit amet. Donec id quam sed urna placerat tempor. Integer hendrerit, est eget porta porttitor, purus lacus consectetur lectus, sed tincidunt ligula arcu vitae justo. 
