--- a/src/content/partners/nglcc.yaml
+++ b/src/content/partners/nglcc.yaml
@@ -1,4 +1,4 @@
 name: National LGBT Chamber of Commerce
-logo: ./_images/nglcc.png
+logo: ../../assets/images/partners/nglcc/logo.png
 url: https://nglcc.org/
 height: 54
