--- a/src/content/authors/eva-decker.yaml
+++ b/src/content/authors/eva-decker.yaml
@@ -2,12 +2,4 @@ name: Eva Decker
 role: Co-Founder, Namesake
 avatar: ~/assets/images/authors/eva-decker/avatar.jpg
 bio: Eva Decker (she/they) leads Namesake's product and design. Previously, she's worked as a product designer and design engineer at Scribe, Cityblock, and Dropbox. 
-socialLinks:
-  - name: Website
-    url: https://eva.town
-  - name: Bluesky
-    url: https://bsky.app/profile/eva.town
-  - name: GitHub
-    url: https://github.com/evadecker
-  - name: LinkedIn
-    url: https://www.linkedin.com/in/evadecker/
+socialLinks: []
