--- a/package.json
+++ b/package.json
@@ -41,8 +41,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@csstools/postcss-logical-viewport-units": "^3.0.1",
     "@playwright/test": "^1.46.0",
     "@types/node": "^22.2.0",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.5",
+    "postcss-clamp": "^4.1.0",
+    "postcss-media-minmax": "^5.0.0",
+    "postcss-utopia": "^1.1.0",
     "sass": "^1.77.8",
     "sharp": "^0.33.4"
   },
