--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "astro-font": "^0.1.81",
     "dayjs": "^1.11.13",
     "fathom-client": "^3.7.2",
+    "marked": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
