--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/cloudflare": "12.1.0",
     "@astrojs/markdoc": "^0.12.4",
+    "@astrojs/markdown-remark": "^6.0.1",
     "@astrojs/react": "^4.1.2",
     "@astrojs/sitemap": "^3.2.1",
     "@axe-core/playwright": "^4.10.1",
@@ -31,9 +32,9 @@
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.2",
     "astro-font": "^0.1.81",
+    "astro-github-file-loader": "^1.0.2",
     "dayjs": "^1.11.13",
     "fathom-client": "^3.7.2",
-    "marked": "^15.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
