--- a/src/content/authors/eva-decker.yaml
+++ b/src/content/authors/eva-decker.yaml
@@ -1,5 +1,5 @@
 name: Eva Decker
 role: Co-Founder, Namesake
 avatar: ~/assets/images/authors/eva-decker/avatar.jpg
-bio: Eva Decker (she/they) leads Namesake's product and design. Previously, she's worked as a product designer and design engineer at Scribe, Cityblock, and Dropbox. 
+bio: Eva Decker (they/she) leads Namesake's product and design. Previously, they've worked as a product designer and design engineer at Scribe, Cityblock, and Dropbox.
 socialLinks: []
