--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "astro-github-file-loader": "^1.1.0",
     "dayjs": "^1.11.13",
     "fathom-client": "^3.7.2",
+    "markdoc": "^0.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
