--- a/src/content/authors/luke-lennon.yaml
+++ b/src/content/authors/luke-lennon.yaml
@@ -1,8 +1,7 @@
 name: Luke Lennon
 role: Co-Founder, Namesake
 bio: >-
-  Luke Lennon (any/all) wears a few different hats at Namesake, from strategy to
-  admin. They have previously worked at Visible Hands, MassChallenge, and
-  Stratyfy. 
+  Luke Lennon (any/all) founded Namesake in 2021. They have previously worked at
+  Visible Hands, MassChallenge, and Stratyfy.
 avatar: ../../assets/images/authors/luke-lennon/avatar.jpeg
 socialLinks: []
