Update Superbloom logo, fix typos

--- a/src/content/partners/superbloom.yaml
+++ b/src/content/partners/superbloom.yaml
@@ -1,4 +1,4 @@
 name: Superbloom Design
-logo: ../../assets/images/partners/superbloom/logo.svg
+logo: ../../assets/images/partners/superbloom/logo.png
 url: https://superbloom.design/
-height: 72
+height: 58
