Add Sloane video and integration for YouTube embeds

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@astrojs/cloudflare": "12.6.5",
     "@astrojs/markdoc": "^0.15.5",
     "@astrojs/markdown-remark": "^6.3.6",
+    "@astrojs/mdx": "^4.3.4",
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.5.1",
     "@axe-core/playwright": "^4.10.2",
@@ -31,6 +32,7 @@
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.13.3",
+    "astro-embed": "^0.9.0",
     "astro-font": "^1.1.0",
     "astro-github-file-loader": "^1.1.0",
     "dayjs": "^1.11.13",
