--- a/src/content/press/2024-06-washington-blade.yaml
+++ b/src/content/press/2024-06-washington-blade.yaml
@@ -2,6 +2,5 @@ title: Mass. startup streamlining name changes for trans, non-binary residents
 date: 2024-06-14
 url: https://www.washingtonblade.com/2024/06/14/namesake-collaborative-profile/
 outlet: Washington Blade
-image:
-  src: ../../assets/images/press/2024-06-washington-blade/washington-blade.jpg
-  alt: "Kelsey Grunstra, Tre’Andre Carmel Valentine, MG Xiong, and Luke Lennon sit on a couch and smile"
+image: ../../assets/images/press/2024-06-washington-blade/washington-blade.jpg
+imageAlt: "Kelsey Grunstra, Tre’Andre Carmel Valentine, MG Xiong, and Luke Lennon sit on a couch and smile"
