--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.0.5/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
   "files": {
     "includes": [
       "**",
@@ -9,7 +9,7 @@
       "!**/dist",
       "!**/.vscode",
       "!**/src/styles/theme.css",
-      "!.astro/**"
+      "!.astro"
     ]
   },
   "formatter": {
