--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@astrojs/markdown-remark": "^6.3.6",
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/react": "^4.3.0",
+    "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
     "@axe-core/playwright": "^4.10.2",
     "@keystatic/astro": "^5.0.6",
@@ -38,10 +39,12 @@
     "dayjs": "^1.11.13",
     "fathom-client": "^3.7.2",
     "markdoc": "^0.1.3",
+    "markdown-it": "^14.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "rough-notation": "^0.5.1",
+    "sanitize-html": "^2.17.0",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
