--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@axe-core/playwright": "^4.10.2",
     "@keystatic/astro": "^5.0.6",
     "@keystatic/core": "^0.5.48",
+    "@remixicon/react": "^4.6.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.5",
@@ -42,7 +43,6 @@
     "markdown-it": "^14.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
     "rough-notation": "^0.5.1",
     "sanitize-html": "^2.17.0",
     "typescript": "^5.9.2"
