--- a/package.json
+++ b/package.json
@@ -28,23 +28,29 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
     "@axe-core/playwright": "^4.10.2",
-    "@keystatic/astro": "^5.0.6",
-    "@keystatic/core": "^0.5.48",
+    "@portabletext/types": "^2.0.15",
     "@remixicon/react": "^4.6.0",
+    "@sanity/astro": "^3.2.10",
+    "@sanity/client": "^7.11.2",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/types": "^4.9.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.7",
     "astro-embed": "^0.9.0",
     "astro-font": "^1.1.0",
     "astro-github-file-loader": "^1.1.0",
+    "astro-portabletext": "^0.11.3",
     "dayjs": "^1.11.18",
     "fathom-client": "^3.7.2",
-    "markdoc": "^0.1.3",
     "markdown-it": "^14.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-is": "^19.1.1",
     "rough-notation": "^0.5.1",
     "sanitize-html": "^2.17.0",
+    "sanity": "^4.9.0",
+    "styled-components": "^6.1.19",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
