--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # build output
 dist/
+
 # generated types
 .astro/
+
+# sanity
+.sanity/
 
 # dependencies
 node_modules/
@@ -11,7 +15,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
 
 # environment variables
 .env
