--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@remixicon/react": "^4.6.0",
     "@sanity/astro": "^3.2.10",
     "@sanity/client": "^7.11.2",
+    "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/types": "^4.9.0",
+    "@sanity/ui": "^3.1.4",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.7",
@@ -47,6 +49,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-is": "^19.1.1",
+    "react-player": "^3.3.3",
     "rough-notation": "^0.5.1",
     "sanitize-html": "^2.17.0",
     "sanity": "^4.9.0",
