feat: Use Sanity (#252)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,1 @@
-# Keystatic
-KEYSTATIC_GITHUB_CLIENT_ID=
-KEYSTATIC_GITHUB_CLIENT_SECRET=
-KEYSTATIC_SECRET=
-PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=namesake-keystatic
+SANITY_AUTH_TOKEN=
