--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -1,7 +1,7 @@
 name: Accessibility
 on:
   push:
-    branches: main
+    branches: [main]
     paths:
       [
         "src/**/*.ts",
@@ -11,7 +11,7 @@ on:
         "package.json",
       ]
   pull_request:
-    branches: main
+    branches: [main]
     paths:
       [
         "src/**/*.ts",
@@ -36,10 +36,10 @@ jobs:
         with:
           version: 8
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js v22
         uses: actions/setup-node@v5
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '22.x'
           cache: "pnpm"
 
       - name: Install dependencies
