--- a/package.json
+++ b/package.json
@@ -28,29 +28,39 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
     "@axe-core/playwright": "^4.10.2",
-    "@keystatic/astro": "^5.0.6",
-    "@keystatic/core": "^0.5.48",
+    "@portabletext/types": "^2.0.15",
     "@remixicon/react": "^4.6.0",
+    "@sanity/astro": "^3.2.10",
+    "@sanity/client": "^7.11.2",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/types": "^4.9.0",
+    "@sanity/ui": "^3.1.4",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.10",
     "astro-embed": "^0.9.1",
     "astro-font": "^1.1.0",
     "astro-github-file-loader": "^1.1.0",
+    "astro-portabletext": "^0.11.3",
     "dayjs": "^1.11.18",
     "fathom-client": "^3.7.2",
-    "markdoc": "^0.1.3",
     "markdown-it": "^14.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-is": "^19.1.1",
+    "react-player": "^3.3.3",
     "rough-notation": "^0.5.1",
     "sanitize-html": "^2.17.0",
+    "sanity": "^4.9.0",
+    "styled-components": "^6.1.19",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
     "@csstools/postcss-logical-viewport-units": "^3.0.3",
     "@playwright/test": "^1.55.0",
+    "@sanity/cli": "^4.9.0",
     "@types/node": "^24.5.2",
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.1.1",
