--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "@types/d3": "^7.4.3",
     "@types/d3-geo": "^3.1.0",
     "@types/d3-selection": "^3.0.11",
+    "@types/geojson": "^7946.0.16",
     "@types/node": "^24.5.2",
     "@types/topojson-client": "^3.1.5",
+    "@types/topojson-specification": "^1.0.5",
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.1.1",
     "postcss-clamp": "^4.1.0",
