feat: Add state-by-state support map (#258)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/types": "^4.9.0",
     "@sanity/ui": "^3.1.4",
+    "@severo_bo/us-atlas-2023": "^4.0.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.10",
@@ -43,6 +44,9 @@
     "astro-font": "^1.1.0",
     "astro-github-file-loader": "^1.1.0",
     "astro-portabletext": "^0.11.3",
+    "d3": "^7.9.0",
+    "d3-geo": "^3.1.1",
+    "d3-selection": "^3.0.0",
     "dayjs": "^1.11.18",
     "fathom-client": "^3.7.2",
     "markdown-it": "^14.1.0",
@@ -54,6 +58,7 @@
     "sanitize-html": "^2.17.0",
     "sanity": "^4.9.0",
     "styled-components": "^6.1.19",
+    "topojson-client": "^3.1.0",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
@@ -61,7 +66,13 @@
     "@csstools/postcss-logical-viewport-units": "^3.0.3",
     "@playwright/test": "^1.55.0",
     "@sanity/cli": "^4.9.0",
+    "@types/d3": "^7.4.3",
+    "@types/d3-geo": "^3.1.0",
+    "@types/d3-selection": "^3.0.11",
+    "@types/geojson": "^7946.0.16",
     "@types/node": "^24.5.2",
+    "@types/topojson-client": "^3.1.5",
+    "@types/topojson-specification": "^1.0.5",
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.1.1",
     "postcss-clamp": "^4.1.0",
