Update config, use SSR for dynamic routes

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.1",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "astro dev --open",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
+    "dev": "wrangler types && astro dev --open",
+    "start": "wrangler types && astro dev",
+    "build": "wrangler types && astro check && astro build",
+    "preview": "wrangler types && astro preview",
     "astro": "astro",
     "lint": "biome lint",
     "lint:fix": "biome lint --write",
