--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "~/*": ["./src/*"]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "types": ["./worker-configuration.d.ts", "node"]
   },
   "exclude": ["node_modules", "dist", "public"]
 }
