--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "preinstall": "npx only-allow pnpm",
     "dev": "astro dev --open",
     "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
+    "build": "wrangler types && astro check && astro build",
+    "preview": "wrangler types && astro preview",
     "astro": "astro",
     "lint": "biome lint",
     "lint:fix": "biome lint --write",
@@ -79,7 +79,8 @@
     "postcss-media-minmax": "^5.0.0",
     "postcss-utopia": "^1.1.0",
     "sass": "^1.93.2",
-    "sharp": "^0.34.4"
+    "sharp": "^0.34.4",
+    "wrangler": "^4.44.0"
   },
   "homepage": "https://namesake.fyi",
   "bugs": {
