--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.4/schema.json",
   "files": {
     "includes": [
       "**",
@@ -9,7 +9,8 @@
       "!**/dist",
       "!**/.vscode",
       "!**/src/styles/theme.css",
-      "!.astro"
+      "!.astro",
+      "!worker-configuration.d.ts"
     ]
   },
   "formatter": {
