--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "cssnano": "^7.1.2",
+    "husky": "^9.1.7",
     "postcss-clamp": "^4.1.0",
     "postcss-media-minmax": "^5.0.0",
     "postcss-utopia": "^1.1.0",
