--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "prepare": "husky",
     "dev": "astro dev --open",
     "start": "astro dev",
     "build": "wrangler types && astro check && astro build",
