--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "vitest": "4.0.13",
     "wrangler": "^4.50.0"
   },
+  "packageManager": "pnpm@10.23.0",
   "overrides": {
     "vite": "6.4.1"
   },
