--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -20,13 +20,11 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.2.0
-        with:
-          version: 8
 
       - name: Use Node.js v22
         uses: actions/setup-node@v6
         with:
-          node-version: '22.x'
+          node-version: "22.x"
           cache: "pnpm"
 
       - name: Install dependencies
