--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v6
         with:
-          node-version: 20
+          node-version: "22.x"
           cache: "pnpm"
 
       - name: Deploy to GitHub Pages
