--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -33,13 +33,11 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.2.0
-        with:
-          version: 8
 
       - name: Use Node.js v22
         uses: actions/setup-node@v6
         with:
-          node-version: '22.x'
+          node-version: "22.x"
           cache: "pnpm"
 
       - name: Install dependencies
@@ -49,7 +47,7 @@ jobs:
         run: pnpm exec playwright install chromium
 
       - name: Run Playwright tests
-        run: pnpm test
+        run: pnpm test:e2e
 
       - name: Upload Playwright results
         uses: actions/upload-artifact@v5
