--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "format:fix": "biome format --write",
     "check": "astro check && biome check",
     "check:fix": "astro check && biome check --write",
-    "test": "playwright test --reporter=html",
+    "test": "vitest",
+    "test:once": "vitest run",
+    "test:debug": "vitest --inspect-brk --no-file-parallelism",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test --reporter=html",
     "check-links": "lychee --config .lychee.toml .",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
@@ -26,28 +30,28 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.5",
-    "@astrojs/cloudflare": "12.6.10",
-    "@astrojs/markdoc": "^0.15.8",
-    "@astrojs/markdown-remark": "^6.3.8",
-    "@astrojs/mdx": "^4.3.10",
+    "@astrojs/cloudflare": "12.6.11",
+    "@astrojs/markdoc": "^0.15.9",
+    "@astrojs/markdown-remark": "6.3.9",
+    "@astrojs/mdx": "^4.3.12",
     "@astrojs/react": "^4.4.2",
-    "@astrojs/rss": "^4.0.13",
+    "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
     "@axe-core/playwright": "^4.11.0",
     "@portabletext/types": "^3.0.0",
     "@remixicon/react": "^4.7.0",
     "@sanity/astro": "^3.2.10",
-    "@sanity/client": "^7.12.1",
+    "@sanity/client": "^7.13.0",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
-    "@sanity/types": "^4.15.0",
+    "@sanity/types": "^4.18.0",
     "@sanity/ui": "^3.1.11",
     "@severo_bo/us-atlas-2023": "^4.0.0",
-    "astro": "^5.15.9",
-    "astro-embed": "^0.9.1",
+    "astro": "5.16.0",
+    "astro-embed": "^0.9.2",
     "astro-font": "^1.1.0",
     "astro-github-file-loader": "^1.1.0",
-    "astro-portabletext": "^0.11.3",
+    "astro-portabletext": "^0.11.4",
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
     "d3-selection": "^3.0.0",
@@ -59,46 +63,50 @@
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.0",
     "react-is": "^19.2.0",
-    "react-player": "^3.3.3",
+    "react-player": "^3.4.0",
     "rough-notation": "^0.5.1",
     "sanitize-html": "^2.17.0",
-    "sanity": "^4.15.0",
+    "sanity": "^4.18.0",
     "styled-components": "^6.1.19",
     "topojson-client": "^3.1.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.4",
-    "@csstools/postcss-logical-viewport-units": "^3.0.3",
+    "@biomejs/biome": "^2.3.7",
+    "@csstools/postcss-logical-viewport-units": "^3.0.4",
     "@playwright/test": "^1.56.1",
-    "@sanity/cli": "^4.15.0",
-    "@storybook/addon-links": "^10.0.7",
-    "@storybook/addon-themes": "^10.0.7",
-    "@storybook/addon-vitest": "^10.0.7",
-    "@storybook/react": "^10.0.7",
-    "@storybook/react-vite": "^10.0.7",
+    "@sanity/cli": "^4.18.0",
+    "@storybook/addon-links": "^10.0.8",
+    "@storybook/addon-themes": "^10.0.8",
+    "@storybook/addon-vitest": "^10.0.8",
+    "@storybook/react": "^10.0.8",
+    "@storybook/react-vite": "^10.0.8",
     "@types/d3": "^7.4.3",
     "@types/d3-geo": "^3.1.0",
     "@types/d3-selection": "^3.0.11",
     "@types/geojson": "^7946.0.16",
-    "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@types/topojson-client": "^3.1.5",
     "@types/topojson-specification": "^1.0.5",
-    "@vueless/storybook-dark-mode": "^10.0.2",
-    "autoprefixer": "^10.4.21",
+    "@vitest/coverage-v8": "4.0.13",
+    "@vueless/storybook-dark-mode": "^10.0.3",
+    "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
     "cssnano": "^7.1.2",
     "husky": "^9.1.7",
     "postcss-clamp": "^4.1.0",
     "postcss-media-minmax": "^5.0.0",
     "postcss-utopia": "^1.1.0",
-    "sass": "^1.93.3",
     "sharp": "^0.34.5",
-    "storybook": "^10.0.7",
-    "vitest": "^4.0.9",
-    "wrangler": "^4.46.0"
+    "storybook": "^10.0.8",
+    "vitest": "4.0.13",
+    "wrangler": "^4.50.0"
+  },
+  "packageManager": "pnpm@10.23.0",
+  "overrides": {
+    "vite": "6.4.1"
   },
   "homepage": "https://namesake.fyi",
   "bugs": {
