--- a/biome.jsonc
+++ b/biome.jsonc
@@ -33,6 +33,9 @@
         "useNumberNamespace": "error",
         "noInferrableTypes": "error",
         "noUselessElse": "error"
+      },
+      "suspicious": {
+        "noExplicitAny": "off"
       }
     }
   },
