--- a/biome.jsonc
+++ b/biome.jsonc
@@ -13,6 +13,11 @@
       "!worker-configuration.d.ts"
     ]
   },
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space"
