--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "postcss-utopia": "^1.1.0",
     "sharp": "^0.34.5",
     "storybook": "^10.0.8",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "4.0.13",
     "wrangler": "^4.50.0"
   },
