--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,9 +1,9 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "namesake-fyi",
-  "main": "./dist/_worker.js/index.js",
+  "main": "dist/_worker.js/index.js",
   "compatibility_date": "2025-10-22",
-  "compatibility_flags": ["nodejs_compat"],
+  "compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
   "assets": {
     "binding": "ASSETS",
     "directory": "./dist"
