--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
     "react-is": "^19.2.0",
-    "react-player": "^3.4.0",
+    "react-lite-youtube-embed": "^3.3.2",
     "rough-notation": "^0.5.1",
     "sanitize-html": "^2.17.0",
     "sanity": "^4.18.0",
