Save values to IndexedDB, add conditional fields to Social Security form

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "@axe-core/playwright": "^4.11.0",
     "@cantoo/pdf-lib": "^2.5.3",
+    "@internationalized/date": "^3.10.0",
     "@maskito/core": "^4.0.1",
     "@portabletext/types": "^3.0.0",
     "@remixicon/react": "^4.7.0",
@@ -105,6 +106,7 @@
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
     "cssnano": "^7.1.2",
+    "fake-indexeddb": "^6.2.5",
     "husky": "^9.1.7",
     "postcss-clamp": "^4.1.0",
     "postcss-media-minmax": "^5.0.0",
