--- a/package.json
+++ b/package.json
@@ -105,13 +105,16 @@
     "@vitest/coverage-v8": "4.0.15",
     "@vueless/storybook-dark-mode": "^10.0.4",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.19",
     "clsx": "^2.1.1",
     "cssnano": "^7.1.2",
     "fake-indexeddb": "^6.2.5",
     "husky": "^9.1.7",
+    "lodash": "^4.17.23",
     "postcss-clamp": "^4.1.0",
     "postcss-media-minmax": "^5.0.0",
     "postcss-utopia": "^1.1.0",
+    "react-compiler-runtime": "^1.0.0",
     "rollup-plugin-visualizer": "^6.0.5",
     "sharp": "^0.34.5",
     "storybook": "^10.1.10",
